# libbf

./: CMakeLists.txt  README.md  bf.cpp  bf.h  circularbuffer.h  debugger.sh  log.cpp  log.h  ncstring.h  rawstring.h  threads.h
bf/: bf.cpp  bf.h  buffers.h  inthex.h  log.cpp  log.h  ncstring.h  service.h  threads.h
bf/io/: bfio.cpp  bfio.h  bfserial.cpp  bfserial.h  bfsocket.cpp  bfsocket.h
bf/io/net/: CMakeLists.txt  bfsocket.cpp
bf/io/net/test/: CMakeLists.txt  libevtests.cpp  tcptests.cpp  udptests.cpp
bf/ncurses/: ncapplication.cpp  ncapplication.h  ncform.cpp  ncform.h  ncmenu.cpp  ncmenu.h  ncstatusbar.cpp  ncstatusbar.h  ncwidget.cpp  ncwidget.h  ncwindow.cpp  ncwindow.h
bf/net/: bfsocket.cpp  bfsocket.h
tests/: circularbuffer_test.cpp  int_hex_tests.cpp  log_test.cpp  ncurses.cpp  utils_tests.cpp
tools/: bf-backup  bf-backup.conf
